--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "private": true,
     "gypfile": true,
     "dependencies": {
-        "node-uuid": "~1.4.0",
+        "node-uuid": "~1.4.0"
     },
+    "engines": {
+        "node": "~0.10.21"
+    }
 }
