add appropriate licensing information to npm module

--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     },
     "engines": {
         "node": "~0.10.x"
-    }
+    },
+    "licenses": [{
+        "type": "proprietary",
+        "url": "http://www14.software.ibm.com/cgi-bin/weblap/lap.pl?popup=Y&li_formnum=L-ACRR-9FLFNA"
+    }],
 }
