--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
         "node-uuid": "~1.4.0",
         "nopt": "~2.2.0"
     },
+    "devDependencies": {
+	    "nodeunit": "~0.8.6"
+    },
     "engines": {
         "node": "~0.10.x"
     },
     "licenses": [{
         "type": "proprietary",
         "url": "http://www14.software.ibm.com/cgi-bin/weblap/lap.pl?popup=Y&li_formnum=L-ACRR-9FLFNA"
-    }]
+    }],
+    "scripts": {
+    	"test": "./node_modules/.bin/nodeunit --config tests/nodeunit.json tests"
+    }
 }
