--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "node-uuid": "~1.4.0",
         "nopt": "~2.2.0",
         "npmlog": "0.0.6",
-        "moment": "2.5.0"
+        "moment": "2.5.0",
+        "hashmap": "1.1.0"
     },
     "devDependencies": {
         "nodeunit": "~0.9.0"
