--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
         "url": "http://www14.software.ibm.com/cgi-bin/weblap/lap.pl?popup=Y&li_formnum=L-ACRR-9MKEUW"
     }],
     "scripts": {
-        "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/nodeunit --config test/nodeunit.json test"
+        "test": "./node_modules/.bin/istanbul cover ./node_modules/nodeunit/bin/nodeunit --config test/nodeunit.json test"
     }
 }
