switch to using nan macros for version-to-version nodejs c++ addon compatibility

--- a/.jazzignore
+++ b/.jazzignore
@@ -4,4 +4,5 @@ core.ignore= \
              {.git} \
              {build} \
              {coverage} \
+             {node_modules} \
              {proton}
