--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "engineStrict": true,
   "engines": {
-    "node": "0.10.x || 0.12.x || 4.1.x"
+    "node": "0.10.x || 0.12.x || 4.x.x"
   },
   "licenses": [
     {
