Add Node v5 support

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "engineStrict": true,
   "engines": {
-    "node": "0.10.x || 0.12.x || 4.x.x"
+    "node": "0.10.x || 0.12.x || 4.x.x || 5.x.x"
   },
   "licenses": [
     {
