--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     }
   ],
   "scripts": {
+    "install": "node-pre-gyp install --fallback-to-build",
     "test": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/nodeunit/bin/nodeunit -- --config test/nodeunit.json test"
   }
 }
