--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,13 @@
-language: c++
-env:
-  - TRAVIS_NODE_VERSION="0.10"
-  - TRAVIS_NODE_VERSION="0.12"
-  - TRAVIS_NODE_VERSION="4"
-  - TRAVIS_NODE_VERSION="5"
-  - TRAVIS_NODE_VERSION="6"
+language: node_js
+node_js:
+  - '4'
+  - '5'
+  - '6'
 os:
   - linux
   - osx
-sudo: required
-cache:
-  - apt
-before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get update -q
-  - sudo apt-get install -qqy cmake g++-4.8 libssl-dev libsasl2-dev sasl2-bin
-  - echo -e "machine github.ibm.com\n  login $CI_USER_TOKEN" >> ~/.netrc
-  - git clone --depth=1 https://github.ibm.com/mqlight/qpid-proton.git ~/.local/src/qpid-proton
-  - cd ~/.local/src/qpid-proton && mkdir -p build && cd build && cmake -DNOBUILD_JAVA=TRUE -DSASL_IMPL=none -DSSL_IMPL=none -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCMAKE_INSTALL_PREFIX=${HOME}/.local .. && cmake --build . --target install
-  - for F in $(find ~/.local/lib -maxdepth 1 -type l); do cp --remove-destination ~/.local/lib/$(readlink $F) $F; done
-  - cd ${TRAVIS_BUILD_DIR}
-  - echo "node-${TRAVIS_NODE_VERSION}-${TRAVIS_OS_NAME}"
-  - if [ "${TRAVIS_OS_NAME}" == "linux" ] && [ "${TRAVIS_NODE_VERSION}" = "4" ]; then export CXX=g++-4.8; fi
-  - if [ "${TRAVIS_OS_NAME}" == "linux" ] && [ "${TRAVIS_NODE_VERSION}" = "5" ]; then export CXX=g++-4.8; fi
-  - if [ "${TRAVIS_OS_NAME}" == "linux" ] && [ "${TRAVIS_NODE_VERSION}" = "6" ]; then export CXX=g++-4.8; fi
-  - ${CXX} --version
-  - mkdir -p node_modules && npm install nan node-pre-gyp istanbul nodeunit
-  - export PATH="`npm bin`:`npm bin -g`:${PATH}"
-  - rm -rf ~/.nvm && git clone --branch v0.31.0 --depth=1 https://github.com/creationix/nvm.git ~/.nvm
-  - source ~/.nvm/nvm.sh
-  - nvm install "${TRAVIS_NODE_VERSION}"
-  - node --version
+sudo: false
 install:
-  - cd ${TRAVIS_BUILD_DIR} && npm install || node-pre-gyp install --build-from-source
+  - NODE_ENV=unittest npm install
 script:
-  - node-pre-gyp package testpackage
-  - npm test
-  - npm install core-js@1.1.4 && npm install request@2.64.0
-  - GITHUB_TOKEN=$CI_USER_TOKEN node publish.js
+  - NODE_ENV=unittest npm test
