--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mqlight",
-  "version": "2.0.2017081000",
+  "version": "2.0.2019041500",
   "description": "IBM MQ Light Client Module",
   "author": "IBM MQ Light <mqlight@uk.ibm.com>",
   "homepage": "https://developer.ibm.com/messaging/mq-light/",
@@ -26,10 +26,10 @@
     "mqlight-debug": "./bin/mqlight-debug.js"
   },
   "dependencies": {
-    "mqlight-forked-amqp10": "=3.5.3-1.fork",
     "amqp10-link-cache": "1.2.2",
     "debug": "^2.2.0",
-    "moment": "~2.19.3",
+    "moment": "^2.24.0",
+    "mqlight-forked-amqp10": "=3.5.3-1.fork",
     "nopt": "~3.0.6",
     "npmlog": "~2.0.4",
     "uuid": "^2.0.2"
